[package]
name = "inpoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meshgridrs = "0.1.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ordered-float = "4.2.0"

[dev-dependencies]
gnuplot = "0.0.43"
